plugins {
    id 'java'
}

buildDir = "bin"

repositories {
    mavenCentral()
    maven {
        url 'https://repo.clojars.org'
        name 'Clojars'
    }
    // Add Spring repositories
    maven {
        url 'https://repo.spring.io/milestone'
    }
    maven {
        url 'https://repo.spring.io/snapshot'
    }
}

dependencies {
    implementation 'org.mongodb:mongodb-driver-sync:4.9.1'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'org.apache.lucene:lucene-core:8.11.1'
    implementation 'org.apache.lucene:lucene-analyzers-common:8.10.0'
    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
    implementation 'org.slf4j:slf4j-simple:2.0.0-alpha1'

    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation platform('org.springframework.boot:spring-boot-dependencies:2.5.0')

    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.json:json:20210307'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'

}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }

}